# Trading

./: .gitignore  AGENTS.md  pyproject.toml  readme.md  requirements.txt
data/: pulling.py
examples/: dynamic_dca_vectorbt.py
notebooks/: backtest_explore.ipynb
scripts/: generate_report.py  run_experiments.py
tests/: test_data_sources.py  test_experiment_module.py  test_rebalance.py  test_report_preview_variants.py  test_reporting.py  test_specs_module.py  test_strategy_enhancements.py
trading/: __init__.py  baseline_builders.py  cli.py  data.py  engine.py  experiment.py  metrics.py  rebalance.py  scenario_context.py  specs.py  viz.py
trading/reporting/: __init__.py  codex_adapter.py  package.py
trading/strategies/: __init__.py  dca.py
trading_backtest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
