[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-backtest"
version = "0.1.0"
description = "DCA backtest engine with baselines, metrics, and Plotly reports"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "vectorbt>=0.26.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0", "kaleido>=0.2.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading*"]
